gramatica/CParser.py
# Generated from C.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CParser ( Parser ):

    grammarFileName = "C.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'#include'", "'#define'", "'('", "')'", 
                     "'struct'", "'{'", "'}'", "';'", "'union'", "'return'", 
                     "'='", "'['", "']'", "'.'", "'if'", "'else'", "'while'", 
                     "'do'", "'for'", "'switch'", "'break'", "'case'", "':'", 
                     "'default'", "'printf'", "','", "'scanf'", "'&'", "'gets'", 
                     "'puts'", "'-'", "'*'", "'/'", "'%'", "'+'", "'<'", 
                     "'<='", "'>'", "'>='", "'=='", "'!='", "'&&'", "'||'", 
                     "'int'", "'float'", "'double'", "'long double'", "'char'", 
                     "'short'", "'long'", "'unsigned'", "'unsigned char'", 
                     "'unsigned int'", "'unsigned short'", "'unsigned long'", 
                     "'long long'", "'unsigned long long'", "'string'", 
                     "'void'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "IncludeFile", "Number", "CharLiteral", "StringLiteral", 
                      "Identifier", "WS", "COMMENT", "MULTILINE_COMMENT" ]

    RULE_program = 0
    RULE_directive = 1
    RULE_functionDef = 2
    RULE_structDef = 3
    RULE_unionDef = 4
    RULE_statement = 5
    RULE_returnStatement = 6
    RULE_block = 7
    RULE_varDecl = 8
    RULE_arraySize = 9
    RULE_assignment = 10
    RULE_ifStatement = 11
    RULE_whileStatement = 12
    RULE_doWhileStatement = 13
    RULE_forHeaderAssignment = 14
    RULE_forStatement = 15
    RULE_switchStatement = 16
    RULE_breakStatement = 17
    RULE_caseLabel = 18
    RULE_defaultLabel = 19
    RULE_caseBlock = 20
    RULE_defaultBlock = 21
    RULE_functionCall = 22
    RULE_inputOutputStatement = 23
    RULE_expression = 24
    RULE_argumentList = 25
    RULE_paramList = 26
    RULE_type = 27

    ruleNames =  [ "program", "directive", "functionDef", "structDef", "unionDef", 
                   "statement", "returnStatement", "block", "varDecl", "arraySize", 
                   "assignment", "ifStatement", "whileStatement", "doWhileStatement", 
                   "forHeaderAssignment", "forStatement", "switchStatement", 
                   "breakStatement", "caseLabel", "defaultLabel", "caseBlock", 
                   "defaultBlock", "functionCall", "inputOutputStatement", 
                   "expression", "argumentList", "paramList", "type" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    IncludeFile=60
    Number=61
    CharLiteral=62
    StringLiteral=63
    Identifier=64
    WS=65
    COMMENT=66
    MULTILINE_COMMENT=67

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CParser.EOF, 0)

        def directive(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CParser.DirectiveContext)
            else:
                return self.getTypedRuleContext(CParser.DirectiveContext,i)


        def functionDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CParser.FunctionDefContext)
            else:
                return self.getTypedRuleContext(CParser.FunctionDefContext,i)


        def structDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CParser.StructDefContext)
            else:
                return self.getTypedRuleContext(CParser.StructDefContext,i)


        def unionDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CParser.UnionDefContext)
            else:
                return self.getTypedRuleContext(CParser.UnionDefContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CParser.StatementContext)
            else:
                return self.getTypedRuleContext(CParser.StatementContext,i)


        def getRuleIndex(self):
            return CParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = CParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((((_la - 1)) & ~0x3f) == 0 and ((1 << (_la - 1)) & -8646920079753133133) != 0):
                self.state = 61
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 56
                    self.directive()
                    pass

                elif la_ == 2:
                    self.state = 57
                    self.functionDef()
                    pass

                elif la_ == 3:
                    self.state = 58
                    self.structDef()
                    pass

                elif la_ == 4:
                    self.state = 59
                    self.unionDef()
                    pass

                elif la_ == 5:
                    self.state = 60
                    self.statement()
                    pass


                self.state = 65
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 66
            self.match(CParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DirectiveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IncludeFile(self):
            return self.getToken(CParser.IncludeFile, 0)

        def Identifier(self):
            return self.getToken(CParser.Identifier, 0)

        def expression(self):
            return self.getTypedRuleContext(CParser.ExpressionContext,0)


        def getRuleIndex(self):
            return CParser.RULE_directive

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDirective" ):
                listener.enterDirective(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDirective" ):
                listener.exitDirective(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDirective" ):
                return visitor.visitDirective(self)
            else:
                return visitor.visitChildren(self)




    def directive(self):

        localctx = CParser.DirectiveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_directive)
        try:
            self.state = 73
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 68
                self.match(CParser.T__0)
                self.state = 69
                self.match(CParser.IncludeFile)
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 2)
                self.state = 70
                self.match(CParser.T__1)
                self.state = 71
                self.match(CParser.Identifier)
                self.state = 72
                self.expression(0)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(CParser.TypeContext,0)


        def Identifier(self):
            return self.getToken(CParser.Identifier, 0)

        def block(self):
            return self.getTypedRuleContext(CParser.BlockContext,0)


        def paramList(self):
            return self.getTypedRuleContext(CParser.ParamListContext,0)


        def getRuleIndex(self):
            return CParser.RULE_functionDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDef" ):
                listener.enterFunctionDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDef" ):
                listener.exitFunctionDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDef" ):
                return visitor.visitFunctionDef(self)
            else:
                return visitor.visitChildren(self)




    def functionDef(self):

        localctx = CParser.FunctionDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_functionDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.type_()
            self.state = 76
            self.match(CParser.Identifier)
            self.state = 77
            self.match(CParser.T__2)
            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 1152903912420803104) != 0):
                self.state = 78
                self.paramList()


            self.state = 81
            self.match(CParser.T__3)
            self.state = 82
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(CParser.Identifier, 0)

        def varDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CParser.VarDeclContext)
            else:
                return self.getTypedRuleContext(CParser.VarDeclContext,i)


        def getRuleIndex(self):
            return CParser.RULE_structDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStructDef" ):
                listener.enterStructDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStructDef" ):
                listener.exitStructDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStructDef" ):
                return visitor.visitStructDef(self)
            else:
                return visitor.visitChildren(self)




    def structDef(self):

        localctx = CParser.StructDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_structDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(CParser.T__4)
            self.state = 85
            self.match(CParser.Identifier)
            self.state = 86
            self.match(CParser.T__5)
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1152903912420803104) != 0):
                self.state = 87
                self.varDecl()
                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 93
            self.match(CParser.T__6)
            self.state = 94
            self.match(CParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UnionDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(CParser.Identifier, 0)

        def varDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CParser.VarDeclContext)
            else:
                return self.getTypedRuleContext(CParser.VarDeclContext,i)


        def getRuleIndex(self):
            return CParser.RULE_unionDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnionDef" ):
                listener.enterUnionDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnionDef" ):
                listener.exitUnionDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnionDef" ):
                return visitor.visitUnionDef(self)
            else:
                return visitor.visitChildren(self)




    def unionDef(self):

        localctx = CParser.UnionDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_unionDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(CParser.T__8)
            self.state = 97
            self.match(CParser.Identifier)
            self.state = 98
            self.match(CParser.T__5)
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1152903912420803104) != 0):
                self.state = 99
                self.varDecl()
                self.state = 104
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 105
            self.match(CParser.T__6)
            self.state = 106
            self.match(CParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDecl(self):
            return self.getTypedRuleContext(CParser.VarDeclContext,0)


        def assignment(self):
            return self.getTypedRuleContext(CParser.AssignmentContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(CParser.IfStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(CParser.WhileStatementContext,0)


        def doWhileStatement(self):
            return self.getTypedRuleContext(CParser.DoWhileStatementContext,0)


        def forStatement(self):
            return self.getTypedRuleContext(CParser.ForStatementContext,0)


        def switchStatement(self):
            return self.getTypedRuleContext(CParser.SwitchStatementContext,0)


        def functionCall(self):
            return self.getTypedRuleContext(CParser.FunctionCallContext,0)


        def inputOutputStatement(self):
            return self.getTypedRuleContext(CParser.InputOutputStatementContext,0)


        def block(self):
            return self.getTypedRuleContext(CParser.BlockContext,0)


        def breakStatement(self):
            return self.getTypedRuleContext(CParser.BreakStatementContext,0)


        def expression(self):
            return self.getTypedRuleContext(CParser.ExpressionContext,0)


        def getRuleIndex(self):
            return CParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = CParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 129
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 108
                self.varDecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 109
                self.assignment()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 110
                self.ifStatement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 111
                self.whileStatement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 112
                self.doWhileStatement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 113
                self.forStatement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 114
                self.switchStatement()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 115
                self.functionCall()
                self.state = 116
                self.match(CParser.T__7)
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 118
                self.inputOutputStatement()
                self.state = 119
                self.match(CParser.T__7)
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 121
                self.match(CParser.T__7)
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 122
                self.block()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 123
                self.breakStatement()
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 124
                self.match(CParser.T__9)
                self.state = 126
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if ((((_la - 3)) & ~0x3f) == 0 and ((1 << (_la - 3)) & 4323455642544111617) != 0):
                    self.state = 125
                    self.expression(0)


                self.state = 128
                self.match(CParser.T__7)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(CParser.ExpressionContext,0)


        def getRuleIndex(self):
            return CParser.RULE_returnStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnStatement" ):
                listener.enterReturnStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnStatement" ):
                listener.exitReturnStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnStatement" ):
                return visitor.visitReturnStatement(self)
            else:
                return visitor.visitChildren(self)




    def returnStatement(self):

        localctx = CParser.ReturnStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_returnStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(CParser.T__9)
            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((((_la - 3)) & ~0x3f) == 0 and ((1 << (_la - 3)) & 4323455642544111617) != 0):
                self.state = 132
                self.expression(0)


            self.state = 135
            self.match(CParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CParser.StatementContext)
            else:
                return self.getTypedRuleContext(CParser.StatementContext,i)


        def getRuleIndex(self):
            return CParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = CParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.match(CParser.T__5)
            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((((_la - 5)) & ~0x3f) == 0 and ((1 << (_la - 5)) & 612488999622276155) != 0):
                self.state = 138
                self.statement()
                self.state = 143
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 144
            self.match(CParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(CParser.TypeContext,0)


        def Identifier(self):
            return self.getToken(CParser.Identifier, 0)

        def arraySize(self):
            return self.getTypedRuleContext(CParser.ArraySizeContext,0)


        def expression(self):
            return self.getTypedRuleContext(CParser.ExpressionContext,0)


        def getRuleIndex(self):
            return CParser.RULE_varDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDecl" ):
                listener.enterVarDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDecl" ):
                listener.exitVarDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDecl" ):
                return visitor.visitVarDecl(self)
            else:
                return visitor.visitChildren(self)




    def varDecl(self):

        localctx = CParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_varDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.type_()
            self.state = 147
            self.match(CParser.Identifier)
            self.state = 149
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==12:
                self.state = 148
                self.arraySize()


            self.state = 153
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==11:
                self.state = 151
                self.match(CParser.T__10)
                self.state = 152
                self.expression(0)


            self.state = 155
            self.match(CParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArraySizeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Number(self):
            return self.getToken(CParser.Number, 0)

        def getRuleIndex(self):
            return CParser.RULE_arraySize

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArraySize" ):
                listener.enterArraySize(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArraySize" ):
                listener.exitArraySize(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArraySize" ):
                return visitor.visitArraySize(self)
            else:
                return visitor.visitChildren(self)




    def arraySize(self):

        localctx = CParser.ArraySizeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_arraySize)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.match(CParser.T__11)
            self.state = 158
            self.match(CParser.Number)
            self.state = 159
            self.match(CParser.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(CParser.ExpressionContext,i)


        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(CParser.Identifier)
            else:
                return self.getToken(CParser.Identifier, i)

        def getRuleIndex(self):
            return CParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = CParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_assignment)
        self._la = 0 # Token type
        try:
            self.state = 181
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 161
                self.match(CParser.Identifier)
                self.state = 166
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==14:
                    self.state = 162
                    self.match(CParser.T__13)
                    self.state = 163
                    self.match(CParser.Identifier)
                    self.state = 168
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 169
                self.match(CParser.T__10)
                self.state = 170
                self.expression(0)
                self.state = 171
                self.match(CParser.T__7)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 173
                self.match(CParser.Identifier)
                self.state = 174
                self.match(CParser.T__11)
                self.state = 175
                self.expression(0)
                self.state = 176
                self.match(CParser.T__12)
                self.state = 177
                self.match(CParser.T__10)
                self.state = 178
                self.expression(0)
                self.state = 179
                self.match(CParser.T__7)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

